Small template fixes

--- a/templates/about.html
+++ b/templates/about.html
@@ -2,7 +2,7 @@
 {% block body %}
 <section class="section">
 	<div class="container">
-		<div class="tile">
+		<div class="tile box">
 			<ul>
 				<li>Neural Network Framwork: <a href="http://mxnet.io">MXNet</a></li>
 				<li>Pre-trained model: <a href="http://mxnet.io/tutorials/python/predict_image.html">http://mxnet.io/tutorials/python/predict_image.html</a></li>
