Add barplot of prediction

--- a/templates/index.html
+++ b/templates/index.html
@@ -33,33 +33,22 @@
         <div class="tile">
           <div class="tile is-parent is-vertical">
             <article class="tile is-child box">
-              {% if prediction_result %}
-              <h1 class="title">Prediction</h1>
-              <table class="table">
-                <thead>
-                  <tr>
-                    <th>Item</th>
-                    <th>Probability</th>
-                  </tr>
-                </thead>
-                {% for item, prob in prediction_result %}
-                <tr>
-                  <td> {{ item }} </td>
-                  <td> {{ prob }} </td>
-                </tr>
-                {% endfor %}
-              </table>
-              {% endif %}
+                {% if img_src %}
+                <h1 class="title">Source</h1>
+
+              <figure class="image is-1by1">
+                  <img src="{{img_src}}" class="img-rounded">
+                </figure>
+                {% endif %}
             </article>
           </div>
-
           <div class="tile is-parent">
             <article class="tile is-child box">
-              {% if img_src %}
-              <figure class="image is-1by1">
-                <img src="{{img_src}}" class="img-rounded">
-              </figure>
-              {% endif %}
+                {% if prediction_result %}
+                <h1 class="title">Prediction</h1>
+                <div id="graph-0"></div>
+                {% endif %}
+
             </article>
           </div>
         </div>
