--- a/templates/about.html
+++ b/templates/about.html
@@ -4,9 +4,9 @@
 	<div class="container">
 		<div class="tile box">
 			<ul>
-				<li>Neural Network Framwork: <a href="http://mxnet.io">MXNet</a></li>
-				<li>Pre-trained model: <a href="http://mxnet.io/tutorials/python/predict_image.html">http://mxnet.io/tutorials/python/predict_image.html</a></li>
-				<li>Web interface developed with <a href="http://flask.pocoo.org">Flask</a></li>
+				<li>Neural Network Framwork: <a href="http://arxiv.org/abs/1512.03385">ResNet-50</a></li>
+				<li>Model trained with: <a href="https://github.com/fastai/fastai">fast.ai v1</a></li>
+				<li>Web interface developed with: <a href="http://flask.pocoo.org">flask</a>, <a href="https://plot.ly">plot.ly</a> and <a href="https://bulma.io">bulma</a>.</li>
 				<li>Created by <a href="https://www.christianwerner.net">C. Werner</a></li>
 			</ul>
 		</div>
